jobs cache implementations